swagger commands added
